--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # PDF Processing
 pdfplumber>=0.10.0,<0.12.0
-PyPDF2==3.0.1
+PyPDF2>=3.0.2,<4.0.0
 
 # Data Processing & Analytics
-numpy>=1.26.0,<1.27.0
+numpy>=1.26.0,<3.0.0
 pandas>=2.2.2,<3.0.0
 scikit-learn>=1.3.0,<2.0.0
 
