--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # PDF Processing
 pdfplumber>=0.10.0,<0.12.0
-PyPDF2>=3.0.2,<4.0.0
+PyPDF2==3.0.1
 
 # Data Processing & Analytics
 numpy>=1.26.0,<3.0.0
